--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.vwmin</groupId>
     <artifactId>terminal-service</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <description>轻松创建处理命令的coolq bot.</description>
 
     <properties>
@@ -40,6 +40,18 @@
             <version>1.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <version>2.2.6.RELEASE</version>
+            <optional>true</optional>
+        </dependency>
 
 
     </dependencies>
